  * Option "autoaway" to define when to set user away if ever
  * Option "chandiscon" to define what to do with channels when server
    drops the connection
  * Option not to redirect stdout into logfile
  * miau should finally get along with safe channels (#1245923)
  * "miau" no longer thinks it was kicked off a channel when "miau_" is kicked
  * Fixed logging of modeless channels
  * Fixed illegal memory access at parting channel when chanlog compiled in
  * Fixed minor memory leak in rehash
  * Fixed nick rotation
  * Fixed sample-miaurc
  * Fixed nick comparison to be case insensitive at PART & KICK
  * Cleaned up client.c
  * Removed duplicated code in several places


0.5.4-p3 - "compatible catnap"

  * Fixed b0rken -c switch (crypt password)
  * Fixed qlog timestamp duplication
  * Fixed illegal memory access at nick generation (totally random)


0.5.4-p2 - "compatible catnap"

  * Use socklen_t (with automatic typedef for systems such as HPUX)
  * No more -O2 by default. Portability...
  * del_ignorebynumber (of ignore.c) now static, like prototype suggests.
  * hstrerror should no longer cause trouble on Digital UNIX. Keep your
    thumbs up!


0.5.4-p1 - "compatible catnap"

  * Removed traces of iconv and ENCODING stuff to make the thing compile on
    systems without iconv stuff installed...
  * Cast htonl to unsigned int before printfing %u.
  * Fixed compiling with QLOG but without INBOX.
  * Include unistd.h in dcc.h


0.5.4 - "catnap"

  * Channel keys defined in miaurc now have effect. Thanks to Ralf van der
    Enden.
  * Workaround for Chatzilla. Thanks to Oliver Eikemeier and James Ross.
  * Fixed channel mode change parser.
  * Fixed parser to handle CR-LF -linefeeds.
  * Fixed strlen(NULL) in match.c
  * Fixed double-freeing memory in free_resources
  * Added miaurc-options "floodtimer" and "burstsize" for configuring
    flood-protection.
  * Added an option for defining how many times miau should try to rejoin the